k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: platform
    labels:
        app.kubernetes.io/part-of: k8s-cicd-platform
