k8s/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: platform-api
    namespace: platform
    labels:
        app.kubernetes.io/name: platform-api
        app.kubernetes.io/part-of: k8s-cicd-platform
spec:
    replicas: 2
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 0
            maxSurge: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: platform-api
    template:
        metadata:
            labels:
                app.kubernetes.io/name: platform-api
                app.kubernetes.io/part-of: k8s-cicd-platform
        spec:
            terminationGracePeriodSeconds: 30
            securityContext:
                runAsNonRoot: true
                runAsUser: 1000
                runAsGroup: 1000
                fsGroup: 1000
                seccompProfile:
                    type: RuntimeDefault
            containers:
                - name: platform-api
                  image: k8s-cicd-platform:v0.4.0
                  imagePullPolicy: IfNotPresent
                  ports:
                      - name: http
                        containerPort: 8000
                        protocol: TCP
                  securityContext:
                      allowPrivilegeEscalation: false
                      readOnlyRootFilesystem: true
                      capabilities:
                          drop:
                              - ALL
                  resources:
                      requests:
                          cpu: 100m
                          memory: 128Mi
                      limits:
                          cpu: 500m
                          memory: 256Mi
                  startupProbe:
                      httpGet:
                          path: /health
                          port: http
                      periodSeconds: 5
                      timeoutSeconds: 2
                      failureThreshold: 12
                  readinessProbe:
                      httpGet:
                          path: /ready
                          port: http
                      periodSeconds: 5
                      timeoutSeconds: 2
                      failureThreshold: 3
                  livenessProbe:
                      httpGet:
                          path: /health
                          port: http
                      periodSeconds: 10
                      timeoutSeconds: 2
                      failureThreshold: 3
