k8s/30-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: platform-api
    namespace: platform
    labels:
        app.kubernetes.io/name: platform-api
        app.kubernetes.io/part-of: k8s-cicd-platform
spec:
    type: ClusterIP
    selector:
        app.kubernetes.io/name: platform-api
    ports:
        - name: http
          port: 8000
          targetPort: http
          protocol: TCP
